<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProfileSlide</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="profile">Profile</string>
	<string name="contact">Contact</string>
	<string name="hobby">hobby</string>
	<string name="profile_test">PROFILE TEST</string>
	<string name="hobby_test">HOBBY TEST</string>
	<string name="contact_test">CONTACT TEST</string>
	<string name="check_test">debug</string>	
	<string name="merge_test">MERGE BTN</string>
	
</resources>