<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:gravity="left" >

        <TextView
            android:id="@+id/checking"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/check_test"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center" >

        <fragment
            android:id="@+id/profile_fm"
            android:name="com.example.profileslide.Profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <fragment
            android:id="@+id/hobby_fm"
            android:name="com.example.profileslide.Hobby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <fragment
            android:id="@+id/contact_fm"
            android:name="com.example.profileslide.Contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
       
    </LinearLayout>

    <Button
        android:id="@+id/profile_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile" />

    <Button
        android:id="@+id/contact_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/linearLayout1"
        android:layout_alignTop="@id/linearLayout1"
        android:text="@string/contact" />

    <Button
        android:id="@+id/hobby_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:text="@string/hobby" />

    <Button
        android:id="@+id/merge_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hobby_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/merge_test" />

</RelativeLayout>